deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-alert-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-alert-webapp
  template:
    metadata:
      labels:
        app: flask-alert-webapp
    spec:
      containers:
      - name: flask-alert-webapp
        image: vikramsingh8948/flask-alert-webapp:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: flask-alert-webapp
spec:
  type: NodePort
  selector:
    app: flask-alert-webapp
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
    nodePort: 30001
