webapp-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: my-app.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: flask-alert-webapp-svc
            port:
              number: 5000
